      various utility functions for computing additional diagnostics variables derived 
      from those stored during simulation with `dynamic_diagnostics = True`. 
      These computations were previously hard-coded into `ResultDymolaBinary`.
    * Simulations using `ExplicitEuler` with `dynamic_diagnostics = True` now also 
      store event indicator values.

--- PyFMI-2.17.4 ---
    * Fixed type annotation issue causing incompatibility with Python < 3.10.

--- PyFMI-2.17.3 ---
    * Fixed a race-condition in using ResultDymolaBinary.get_variables_data().

--- PyFMI-2.17.2 ---
    * Fixed an issue for dynamic_diagnostics, where failures to evaluate the Jacobian would result in invalid XML.
    * Fixed a bug introduced in PyFMI 2.17.1 that could when retreiving variables with very large value references in CoupledFMUModelME2.

--- PyFMI-2.17.1 ---
    * Fixed compilation issue with Cython 3.1.
    * Added a new flag for building which allows the user to specify the exact name of the FMIL library.

--- PyFMI-2.17.0 ---
    * Refactored internal files, this does affect a small number of secondary imports.
    * New function `get_unpacked_fmu_path` for the `FMUModel(CS|ME)X` classes. Returns
      the absolute path of the unpacked FMU.
    * Fixed an issue with retrieving `@Diagnostics.cpu_time` via `get_variables_data`.

--- PyFMI-2.16.3 ---
    * Changed default log and file size limitations from 2 GiB (2*1024**3) to 2 GB (2e9).
      Updated the corresponding error messages to correctly reference sizes in GB instead of GiB.
    * Clarified that the `filter` option only applies to model variables.
    * Fixed a bug introduced in PyFMI 2.15 where the diagnostics trajectory for CPU time was
      returned as CPU time per step instead of cumulative CPU time.

--- PyFMI-2.16.2 ---
    * Increased robustness of getting the `supports` attribute from ResultHandlers.
    * Fixed an Exception when using `dynamic_diagnostics` and scalar `atol`.