@@ -1810,11 +1810,11 @@ class TestResultDymolaBinary:
                 4: [0.02, 0.02, 0.02, 0.02, 0.02]
             },
             '@Diagnostics.nbr_steps': {
-                0: [ 1.,  2.,  3.,  4.,  5.,  6.],
-                1: [ 7.,  8.,  9., 10., 11.],
-                2: [12., 13., 14., 15., 16.],
-                3: [17., 18., 19., 20., 21.],
-                4: [22., 23., 24., 25., 26.],
+                0: [ 0., 1.,  2.,  3.,  4.,  5.],
+                1: [ 6., 7.,  8.,  9., 10.],
+                2: [11., 12., 13., 14., 15.],
+                3: [16., 17., 18., 19., 20.],
+                4: [21., 22., 23., 24., 25.],
             }
         }
 
@@ -1836,11 +1836,11 @@ class TestResultDymolaBinary:
                 4: [0.15, 0.17]
             },
             '@Diagnostics.nbr_steps': {
-                0: [1, 2],
-                1: [3, 4],
-                2: [5, 6],
-                3: [7, 8],
-                4: [9, 10],
+                0: [0, 1],
+                1: [2, 3],
+                2: [4, 5],
+                3: [6, 7],
+                4: [8, 9],
             }
         }
 
