@@ -6,6 +6,7 @@
       These computations were previously hard-coded into `ResultDymolaBinary`.
     * Simulations using `ExplicitEuler` with `dynamic_diagnostics = True` now also 
       store event indicator values.
+    * Fixed the issue that `@Diagnostics.nbr_steps` was off by one.
 
 --- PyFMI-2.17.4 ---
     * Fixed type annotation issue causing incompatibility with Python < 3.10.
